@@ -29,6 +29,28 @@ extern "C" {
  * S2600BPB
  */
 
+/* Event Reading Type Code = IPMI_EVENT_READING_TYPE_CODE_REDUNDANCY
+ * or
+ * Event Reading Type Code = IPMI_EVENT_READING_TYPE_CODE_SENSOR_SPECIFIC
+ * Sensor Type = IPMI_SENSOR_TYPE_MEMORY
+ */
+#define IPMI_OEM_INTEL_S2600BPB_EVENT_DATA2_DIMM_INDEX_BITMASK 0xF0
+#define IPMI_OEM_INTEL_S2600BPB_EVENT_DATA2_DIMM_INDEX_SHIFT   4
+
+#define IPMI_OEM_INTEL_S2600BPB_EVENT_DATA2_RANK_INDEX_BITMASK 0x0F
+#define IPMI_OEM_INTEL_S2600BPB_EVENT_DATA2_RANK_INDEX_SHIFT   0
+
+#define IPMI_OEM_INTEL_S2600BPB_EVENT_DATA3_SOCKET_INDEX_BITMASK 0xF0
+#define IPMI_OEM_INTEL_S2600BPB_EVENT_DATA3_SOCKET_INDEX_SHIFT   4
+
+#define IPMI_OEM_INTEL_S2600BPB_EVENT_DATA3_SOCKET_INDEX_CPU1 0x0
+#define IPMI_OEM_INTEL_S2600BPB_EVENT_DATA3_SOCKET_INDEX_CPU2 0x1
+#define IPMI_OEM_INTEL_S2600BPB_EVENT_DATA3_SOCKET_INDEX_CPU3 0x2
+#define IPMI_OEM_INTEL_S2600BPB_EVENT_DATA3_SOCKET_INDEX_CPU4 0x3
+
+#define IPMI_OEM_INTEL_S2600BPB_EVENT_DATA3_CHANNEL_INDEX_BITMASK 0x0F
+#define IPMI_OEM_INTEL_S2600BPB_EVENT_DATA3_CHANNEL_INDEX_SHIFT   0
+
 /* Event Reading Type Code = IPMI_EVENT_READING_TYPE_CODE_OEM_INTEL_NVME_CRITICAL_WARNING_SENSOR
  * Sensor Type = IPMI_SENSOR_TYPE_DISK_DRIVE
  */
